# rbfn-ssl-projector

./: .gitignore  CITATION.cff  README.md  install.sh  pyproject.toml
experiments/: generate.py  generate.sh  run-experiments.sh
experiments/configs/: default_imagenet-100.yaml  default_open-images-v7-10.yaml  default_open-images-v7-30.yaml  default_open-images-v7-50.yaml  rbfn_imagenet-100.yaml  rbfn_open-images-v7-10.yaml  rbfn_open-images-v7-30.yaml  rbfn_open-images-v7-50.yaml
rbfn_ssl_projector/: args.py  enums.py  main.py  utils.py
results/: imagenet-100.ipynb  open-images-v7-10.ipynb  open-images-v7-30.ipynb  open-images-v7-50.ipynb  rbfn-metrics.ipynb
results/imagenet-100/default/: rbfn-ssl-projector-default-eval_imagenet-100.csv  rbfn-ssl-projector-default_imagenet-100.csv
results/imagenet-100/rbfn/: rbfn-ssl-projector-rbfn-eval_imagenet-100.csv  rbfn-ssl-projector-rbfn_imagenet-100.csv
results/open-images-v7-10/default/: rbfn-ssl-projector-default-eval_open-images-v7-10.csv  rbfn-ssl-projector-default_open-images-v7-10.csv
results/open-images-v7-10/rbfn/: rbfn-ssl-projector-rbfn-eval_open-images-v7-10.csv  rbfn-ssl-projector-rbfn_open-images-v7-10.csv
results/open-images-v7-30/default/: rbfn-ssl-projector-default-eval_open-images-v7-30.csv  rbfn-ssl-projector-default_open-images-v7-30.csv
results/open-images-v7-30/rbfn/: rbfn-ssl-projector-rbfn-eval_open-images-v7-30.csv  rbfn-ssl-projector-rbfn_open-images-v7-30.csv
results/open-images-v7-50/default/: rbfn-ssl-projector-default-eval_open-images-v7-50.csv  rbfn-ssl-projector-default_open-images-v7-50.csv
(+2 files in other folders)
